--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ""<!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/TheThreatner/Diddy/refs/heads/main/favicon.png">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Diddy Simulator</title>
@@ -77,15 +78,15 @@
     const bgMusic = document.getElementById('bgMusic');
 
     const diddyImg = new Image();
-    diddyImg.src = 'diddy.png';
+    diddyImg.src = 'https://raw.githubusercontent.com/TheThreatner/Diddy/refs/heads/main/diddy.png';
     const babyImg = new Image();
-    babyImg.src = 'baby.png';
+    babyImg.src = 'https://raw.githubusercontent.com/TheThreatner/Diddy/refs/heads/main/baby.png';
     const oilImg = new Image();
-    oilImg.src = 'baby_oil.png';
+    oilImg.src = 'https://raw.githubusercontent.com/TheThreatner/Diddy/refs/heads/main/baby_oil.png';
     const copImg = new Image();
-    copImg.src = 'cop.png';
+    copImg.src = 'https://raw.githubusercontent.com/TheThreatner/Diddy/refs/heads/main/cop.png';
     const drakeImg = new Image();
-    drakeImg.src = 'drake.png';
+    drakeImg.src = 'https://raw.githubusercontent.com/TheThreatner/Diddy/refs/heads/main/drake.png';
 
     const diddy = { x: 400, y: 550, width: 50, height: 50, speed: 6 };
     const objects = [];
