--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-""<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/TheThreatner/Diddy/refs/heads/main/favicon.png">
